--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -6,6 +6,8 @@ body
 	font-family: tahoma, arial, helvetica, sans-serif;
 	padding: 0px;
 	margin: 0px;
+	background-image: url('/img/bg.gif');
+	background-repeat: repeat-x;
 }
 
 td, th
