--- a/biscuit/stylesheets/_footer.scss
+++ b/biscuit/stylesheets/_footer.scss
@@ -1,9 +1,13 @@
-div.footer
+.footer
 {
-  border-top: 1px solid #d5b980;
   margin: 15px 0;
   text-align: center;
-  padding: 25px;
+  padding: 15px 5px;
   line-height: 20px;
   clear: both;
+  background: #4d3c33;
+  color: white;
+  a {
+    color: white;
+  }
 }
