--- a/biscuit/stylesheets/_header.scss
+++ b/biscuit/stylesheets/_header.scss
@@ -3,7 +3,6 @@ td.header-links
   width: 100%;
   text-align: right;
   padding-right: 12px;
-  background-color: #FF9008;
   color: white;
   font-family: verdana, arial, helvetica, sans-serif;
 }
@@ -33,10 +32,10 @@ td.h
 div.header-user
 {
   width: 100%;
-  background-color: black;
+  background-color: #150906;
   color: white;
-  padding: 3px 0;
-  background-image: url(/img/header_top.gif);
+  padding: 5px 0;
+  border-radius: 5px 5px 0 0
 }
 
 div.header-user-notifications
@@ -57,9 +56,14 @@ a.menulink
   margin: 0 4px;
 }
 
+div.header-links
+{
+  font-size: 20px;
+}
+
 div.header
 {
-  background-color: #FF9008;
   display: table;
   width: 100%;
+  padding-bottom: 5px;
 }
