--- a/biscuit/stylesheets/_page.scss
+++ b/biscuit/stylesheets/_page.scss
@@ -1,16 +1,14 @@
 div.page {
-  background-image: url('/img/bg.gif');
-  background-repeat: repeat-x;
+  width: 950px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div.page-contents
 {
-  margin-left: auto;
-  margin-right: auto;
   width: 950px;
   position: relative;
   top: 0;
-  padding-top: 10px;
 }
 
 #page-left {
