--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -12,11 +12,20 @@
 </head>
 <body>
 <div class="page">
+    <div class="header">
+        <div class="header-logo">
+            <a href="/index.php"><img alt="squareBracket" src="/img/qobo.png"></a>
+        </div>
+        <div class="header-links">
+            <a class="menulink" href="/browse.php">Browse</a>
+            <a class="menulink" href="/users.php">Members</a>
+        </div>
+    </div>
     <div class="header-user">
         {% if is_user_logged_in %}
-        <div class="header-user-notifications">
-            <a class="menulink" href="/notices.php">{{ user_notice_data }} notices</a>
-        </div>
+            <div class="header-user-notifications">
+                <a class="menulink" href="/notices.php">{{ user_notice_data }} notices</a>
+            </div>
         {% endif %}
         <div class="header-user-links">
             {% if is_user_logged_in %}
@@ -33,15 +42,6 @@
             {% endif %}
         </div>
         <div class="clear"></div>
-    </div>
-    <div class="header">
-        <div class="header-logo">
-            <a href="/index.php"><img alt="squareBracket" src="/img/qobo.gif"></a>
-        </div>
-        <div class="header-links">
-            <a class="menulink" href="/browse.php">Browse</a> -
-            <a class="menulink" href="/users.php">Users</a>
-        </div>
     </div>
     <form action="login.php" method="post" name="logout">
         <input type="hidden" name="action" value="logout">
@@ -62,7 +62,11 @@
         {% endif %}
         {% block content %}{% endblock %}
         <div class="footer">
+            <a href="/version.php">Powered by squareOrange.</a>
             <p>© 2021-{{ 'now' | date('Y') }} squareOrange contributors.</p>
+            <a href="/privacy.php">
+                Privacy policy
+            </a>
         </div>
     </div>
 </div>
