--- a/orange/skins/qobo/templates/upload.twig
+++ b/orange/skins/qobo/templates/upload.twig
@@ -5,7 +5,7 @@
 	{% block content %}
         <div class="profile-box">
             <h1>Upload your submission</h1>
-            <p style="margin: 0;">Please only upload works made by you, or for you.</p>
+            <p style="margin: 0;">Please only upload works made by you, or for you. Make sure you have read the <a href="/guidelines.php">guidelines</a> first.</p>
         </div>
         <div class="content-box">
         <form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
