--- a/orange/skins/qobo/templates/watch.twig
+++ b/orange/skins/qobo/templates/watch.twig
@@ -69,6 +69,9 @@
                 <div class="submission-stats-row icons">
                     <span class="silk-companion star_gold"></span><a><span class="elink">Flag</span></a>
                 </div>
+                <div class="submission-stats-row">
+                    <div>Content rating: {{ submission.rating | capitalize }}</div>
+                </div>
             </div>
             <div id="submission-stats-stats">
                 <div class="submission-stats-row">
