--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -19,7 +19,7 @@
 <div class="page">
     <div class="header">
         <div class="header-logo">
-            <a href="/index.php"><img alt="squareBracket" src="/img/qobo.png"></a>
+            <a href="/index.php"><img alt="Qobo" src="/img/qobo.png"></a>
         </div>
         <div class="header-links">
             <a class="menulink" href="/browse.php">Browse</a>
