stupid comment implementation on new qobo (also add ratelimit)
the way commenting worked on opensb finalium is that it needs a bunch of post
variables like "really" and "type". "really" is just to actually confirm if the
request is valid at the slightest, while "type" is supposed to differentiate
between submission comments and user profile comments, which are in two
different tables since I didn't care about db tables back in 2021.

the comment form on new qobo is not done with javascript, it's done with
html, which is why I called this stupid. we'll plan on adding javascript,
but it's probably going to be a garbage mess of jquery and vanilla js mixed
together for no reason.

--- a/biscuit/stylesheets/_comments.scss
+++ b/biscuit/stylesheets/_comments.scss
@@ -1,17 +1,51 @@
-div.comment {
+.comment {
   background: white;
-  margin-bottom: 5px;
+  padding-bottom: 5px;
+
+  img.pfp {
+    width: 100px;
+    float: left;
+  }
+
+  .comment-details {
+    float: left;
+    padding: 5px;
+    width: 130px;
+  }
+
+  .comment-body {
+    width: 696px;
+    float: left;
+
+    .comment-contents {
+      padding: 10px;
+      background: #fcfcfc;
+      border: 1px solid #eee;
+
+      p {
+        margin: 0;
+      }
+
+      blockquote {
+        color: #789922;
+        margin: 0;
+        p:before {
+          content: ">";
+        }
+      }
+    }
+  }
 }
 
-div.comment-header {
-  background: #ffcd63;
-  padding: 5px;
-}
+#replies {
+  .comment {
+    img.pfp {
+      width: 75px;
+    }
 
-div.comment-body {
-  padding: 5px;
-}
-
-div.comment-body p {
-  margin: 0;
+    .comment-body {
+      width: 675px;
+      padding-left: 46px;
+    }
+  }
 }
