--- a/orange/skins/qobo/templates/edit.twig
+++ b/orange/skins/qobo/templates/edit.twig
@@ -27,7 +27,7 @@
 
                 <div class="form-input">
                     Visibility:
-                    <select name="cars" id="cars">
+                    <select name="visibility" id="visibility">
                         <option value="public">Public</option>
                         <option value="scraps">Public (scraps)</option>
                         <option value="unlisted">Unlisted</option>
@@ -37,12 +37,12 @@
 
                 <div class="form-input">
                     <input type="checkbox" id="block_guests" name="block_guests" value="yes">
-                    <label for="vehicle1"> Block guests from viewing this submission</label><br>
+                    <label for="block_guests"> Block guests from viewing this submission</label><br>
                 </div>
 
                 <div class="form-input">
-                    <input type="checkbox" id="block_guests" name="block_guests" value="yes">
-                    <label for="vehicle1"> Block users from commenting in this submission</label><br>
+                    <input type="checkbox" id="block_comments" name="block_comments" value="yes">
+                    <label for="block_comments"> Block users from commenting in this submission</label><br>
                 </div>
 
                 <div class="form-button-container">
