--- a/orange/skins/qobo/templates/profile.twig
+++ b/orange/skins/qobo/templates/profile.twig
@@ -6,7 +6,7 @@
     <div>
         <div class="profile-box">
             <div class="profile-box-pfp">
-                <img src="{{ profile_picture(data.username) }}" class="pfp">
+                <img src="{{ profile_picture(data.username) }}" class="pfp" alt="{{ data.username }}">
             </div>
             <div class="profile-box-username">
                 {{ data.username }}
