register page and dumbass permission fuckery

--- a/orange/skins/qobo/templates/settings.twig
+++ b/orange/skins/qobo/templates/settings.twig
@@ -13,7 +13,7 @@
         <form action="settings.php" method="post" enctype="multipart/form-data">
 
             <div class="text-title tabled">
-                <img src="/img/tango/lock.png">
+                <img src="/img/tango/ratings.png">
                 <span>Ratings</span>
             </div>
 
