--- a/orange/skins/qobo/templates/login.twig
+++ b/orange/skins/qobo/templates/login.twig
@@ -18,7 +18,7 @@
                     </div>
 
                     <div>
-                        <label for="password">Username:</label>
+                        <label for="password">Password:</label>
                         <input type="password" name="password" class="form-submit" placeholder="Password">
                     </div>
 
