--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -21,6 +21,14 @@
         <div class="header-logo">
             <a href="/index.php"><img alt="Qobo" src="/img/qobo.png"></a>
         </div>
+        <form class="header-search" action="/search.php">
+            <input id="header-search-input" type="text" name="query" placeholder="Search...">
+            <div class="form-button-container">
+            <button id="header-search-button" class="form-button-submit">
+                <span>Search</span>
+            </button>
+            </div>
+        </form>
         <div class="header-links">
             <a class="menulink" href="/browse.php">Browse</a>
             <a class="menulink" href="/users.php">Members</a>
