--- a/biscuit/stylesheets/_header.scss
+++ b/biscuit/stylesheets/_header.scss
@@ -1,12 +1,3 @@
-td.header-links
-{
-  width: 100%;
-  text-align: right;
-  padding-right: 12px;
-  color: white;
-  font-family: verdana, arial, helvetica, sans-serif;
-}
-
 div.header-links
 {
   text-align: right;
@@ -22,6 +13,22 @@ div.header-logo
   width: 177px;
   display:table-cell;
   vertical-align:middle;
+}
+
+form.header-search
+{
+  display:table-cell;
+  vertical-align:middle;
+  width: 250px;
+
+  #header-search-input {
+    width: 250px - 75px;
+    padding: 3px;
+  }
+
+  .form-button-container {
+    display: inline;
+  }
 }
 
 td.h
