--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -116,3 +116,4 @@ input[type]:not([type=file]):not([type=submit]):focus {
 @import 'watch_page';
 @import 'profile_page';
 @import 'notice_page';
+@import 'index_page';
