--- a/orange/skins/qobo/templates/components/_profile_submission.twig
+++ b/orange/skins/qobo/templates/components/_profile_submission.twig
@@ -7,5 +7,5 @@
                  class="content-image">
         </a>
     </div>
-    <div class="content-author">By {{ user_link(submission.author) }}</div>
+    <div class="content-author"><a href="/watch.php?v={{ submission.id }}">{{ submission.title }}</a></div>
 </div>
