--- a/orange/skins/qobo/templates/watch.twig
+++ b/orange/skins/qobo/templates/watch.twig
@@ -43,7 +43,7 @@
     {% if submission.is_owner %}
         <div class="content-box watch-edit">
             <a href="/edit?v={{ submission.id }}">Edit</a>
-            <a href="/feature?v={{ submission.id }}">Feature submission</a>
+            <a href="/feature?v={{ submission.id }}">Feature on profile</a>
         </div>
     {% endif %}
     {{ submission_view(submission) }}
@@ -95,6 +95,7 @@
             <span>Comments</span>
         </div>
         <div class="content-box">
+            <div id="comment"></div>
             {% for comment in submission.comments %}
                 {{ include('/components/_comment.twig') }}
                 <div id="replies">
@@ -103,26 +104,40 @@
                     {% endfor %}
                 </div>
             {% endfor %}
-            <div class="new-comment">
-                <div class="text-title">
-                    <span>New comment (todo: this should use javascript)</span>
-                </div>
-                <form name="commentForm" id="commentForm" method="post" action="/comment.php" enctype="multipart/form-data">
-                    <input type="hidden" name="vidid" value="{{ submission.id }}">
-                    <input type="hidden" name="really" value="why_do_we_need_this">
-                    <input type="hidden" name="type" value="video">
-                    <input type="hidden" name="reply_to" value="0">
-                    <div class="form-input">
+            {% if is_user_logged_in %}
+                {% if show_work_in_progress_stuff %}
+                    <div class="new-comment" id="commentField">
+                        <div class="text-title">
+                            <span>New comment (Jquery implementation)</span>
+                        </div>
+                        <textarea class="form-submit-wide" id="commentContents" name="comment" maxlength="1000"
+                                  style="overflow:hidden;resize:vertical" rows="4"></textarea>
+                        <input type="submit" id="post" name="post" class="form-button-submit"
+                               value="Add comment">
+                    </div>
+                {% else %}
+                    <div class="new-comment">
+                        <div class="text-title">
+                            <span>New comment (Placeholder implementation)</span>
+                        </div>
+                        <form name="commentForm" id="commentForm" method="post" action="/comment.php" enctype="multipart/form-data">
+                            <input type="hidden" name="vidid" value="{{ submission.id }}">
+                            <input type="hidden" name="really" value="why_do_we_need_this">
+                            <input type="hidden" name="type" value="video">
+                            <input type="hidden" name="reply_to" value="0">
+                            <div class="form-input">
                 <textarea class="form-submit-wide" name="comment" maxlength="1000"
                           form="commentForm"
                           style="overflow:hidden;resize:vertical" rows="4"></textarea>
+                            </div>
+                            <div class="form-button-container">
+                                <input type="submit" id="upload" name="upload" class="form-button-submit"
+                                       value="Add comment">
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-button-container">
-                        <input type="submit" id="upload" name="upload" class="form-button-submit"
-                               value="Add comment">
-                    </div>
-                </form>
-            </div>
+                {% endif %}
+            {% endif %}
         </div>
     </div>
 {% endblock %}
