--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -33,7 +33,7 @@
 {% block precontent %}{% endblock %}
 <div class="container page-container">
 	<div class="alert alert-info">
-		This page has not been migrated onto the new Orange backend. Stuff may not fully funtion.
+		This page has not been migrated onto the new backend. Stuff may not fully funtion.
 	</div>
 	{% if userbandata %}
 		<div class="alert alert-danger">
