--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -47,7 +47,7 @@
                 {% if user_data.powerlevel > 2 %}
                     <a class="menulink" href="/admin.php">Admin panel</a>
                 {% endif %}
-                <a class="menulink" href="/upload.php">Submit</a>
+                <a class="menulink" href="/upload.php">Upload</a>
                 <a class="menulink" href="logout.php">Log out</a>
             {% else %}
                 <a class="menulink" href="/login.php">Login</a>
@@ -75,8 +75,8 @@
         {% endif %}
         {% block content %}{% endblock %}
         <div class="footer">
-            <a href="/version.php">Powered by squareOrange.</a>
-            <p>© 2021-{{ 'now' | date('Y') }} squareOrange contributors.</p>
+            <a href="/version.php">Powered by openSB {{ squarebracket_version }}.</a>
+            <p>© 2021-{{ 'now' | date('Y') }} openSB contributors.</p>
             <a href="/privacy.php">
                 Privacy policy
             </a>
@@ -84,5 +84,9 @@
     </div>
 </div>
 {% block scripts %}{% endblock %}
+{% if show_work_in_progress_stuff %}
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="/assets/common.js"></script>
+{% endif %}
 </body>
 </html>
