--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -1,13 +1,11 @@
 body
 {
-	background-color: #FFDC91;
+	background: #333 url('/img/by_billygoat.jpg') center center / 100% fixed no-repeat;
 	color: #000000;
 	font-size: small;
 	font-family: tahoma, arial, helvetica, sans-serif;
 	padding: 0px;
 	margin: 0px;
-	background-image: url('/img/bg.gif');
-	background-repeat: repeat-x;
 }
 
 td, th
