--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -76,7 +76,7 @@
         {% block content %}{% endblock %}
         <div class="footer">
             <a href="/version.php">Powered by openSB {{ squarebracket_version }}.</a>
-            <p>© 2021-{{ 'now' | date('Y') }} openSB contributors.</p>
+            <p>© 2021-{{ 'now' | date('Y') }} openSB contributors. Background by <a href="https://www.billyisreal.com/home">Billyisreal.com</a></p>
             <a href="/privacy.php">
                 Privacy policy
             </a>
