delete old bettysb finalium theme, hide incomplete shit from prod, etc.

--- a/orange/skins/qobo/templates/index.twig
+++ b/orange/skins/qobo/templates/index.twig
@@ -6,10 +6,9 @@
     <div class="jumbotron">
         {% if is_user_logged_in %}
             <h1>Welcome to Qobo, {{ user_data.name }}.</h1>
-            <div>Statistics (placeholder)</div>
         {% else %}
             <h1>Welcome to Qobo.</h1>
-            <div>Introduction text (placeholder)</div>
+            <div>Here, you will find a mix of videos and images.</div>
         {% endif %}
     </div>
     <div class="content-header">
