--- a/orange/skins/qobo/templates/users.twig
+++ b/orange/skins/qobo/templates/users.twig
@@ -3,6 +3,7 @@
 {% set title = "Users" %}
 
 	{% block content %}
+		<div class="content-box">
 		<table class="c1">
 			<tr class="h">
 				<th style="width:50px">ID</th>
@@ -21,4 +22,5 @@
 				</tr>
 			{% endfor %}
 		</table>
+		</div>
 	{% endblock %}
