--- a/orange/skins/qobo/templates/version.twig
+++ b/orange/skins/qobo/templates/version.twig
@@ -3,7 +3,7 @@
 {% set title = "Version" %}
 
 {% block content %}
-    <div>
+    <div class="content-box">
         <table class="c1">
             <caption>Version</caption>
         {% for thing in version_stats %}
