--- a/orange/skins/qobo/templates/edit.twig
+++ b/orange/skins/qobo/templates/edit.twig
@@ -25,6 +25,7 @@
                               style="overflow:hidden;resize:vertical" rows="3">{{ data.description }}</textarea>
                 </div>
 
+                {% if show_work_in_progress_stuff %}
                 <div class="form-input">
                     Visibility:
                     <select name="visibility" id="visibility">
@@ -44,6 +45,7 @@
                     <input type="checkbox" id="block_comments" name="block_comments" value="yes">
                     <label for="block_comments"> Block users from commenting in this submission</label><br>
                 </div>
+                {% endif %}
 
                 <div class="form-button-container">
                     <input type="submit" id="upload" name="upload" class="form-button-submit"
