--- a/orange/skins/qobo/templates/register.twig
+++ b/orange/skins/qobo/templates/register.twig
@@ -4,7 +4,7 @@
 
 	{% block content %}
         <div class="content-header">
-            <span>Register on Qobo</span>
+            <span>Register a Qobo account</span>
         </div>
         <div class="content-box">
             <div class="panel-body">
@@ -33,6 +33,7 @@
                         <input type="submit" class="form-button-submit" value="Register" name="registersubmit">
                     </div>
                 </form>
+                <div>By registering on Qobo, you accept the <a href="/privacy.php">Privacy Policy</a>.</div>
             </div>
         </div>
     {% endblock %}
