--- a/orange/skins/qobo/templates/upload.twig
+++ b/orange/skins/qobo/templates/upload.twig
@@ -33,6 +33,7 @@
                     <input class="form-submit" type="file" name="fileToUpload" id="fileToUpload" required>
                     </div>
 
+                    {% if show_work_in_progress_stuff %}
                     <div class="form-input">
                         <label for="rating">Select audience rating:</label>
                         <div>You must set this correctly.</div>
@@ -43,6 +44,7 @@
                             <option value="mature">Mature</option>
                         </select>
                     </div>
+                    {% endif %}
 
                     <div class="form-button-container">
                         <input class="form-button-submit" type="submit" id="upload" name="upload"
